Bug 131234 - RTF import: numbering in list has wrong font size
Summary: RTF import: numbering in list has wrong font size
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: filter:rtf
: 148363 (view as bug list)
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2020-03-09 12:40 UTC by Serge Krot (CIB)
Modified: 2022-04-11 13:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
different list item definitions (3.56 KB, application/rtf)
2020-03-09 12:40 UTC, Serge Krot (CIB)
Details
The example file in Word and Writer master (124.02 KB, image/png)
2022-01-27 12:38 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Serge Krot (CIB) 2020-03-09 12:40:06 UTC
Created attachment 158507 [details]
different list item definitions

In attached RTF document there are different definition of the list items (all are correct according to RTF specification). MS Word shows all of them correctly. LO in some cases uses wrong (much bigger) font size.
Comment 1 Durgapriyanka 2020-03-10 14:51:05 UTC
Thank you for reporting the bug. I can confirm the bug present in

Version: 6.4.0.0.alpha1+ (x86)
Build ID: ec7374ff84c71edfbb30d6e4dc5b486b6df7107f
CPU threads: 2; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-11-10_21:37:30
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
	

and in

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 2 Gabor Kelemen (Collabora) 2022-01-27 12:38:09 UTC
Created attachment 177832 [details]
The example file in Word and Writer master

Still a problem, but has got somewhat better since 6.4 in

Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: eb69767d7c1bb8e6e780fd9503f08c9d7f5ecb45
CPU threads: 13; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Neither the direct formatting font size setting, nor the style-based font size setting is applied to the list numbering, instead some default(?) 7pt size is.

The direct formatting font size is also not applied to the paragraph text, so it's 32 pt at some paragraphs, which comes from the style.
Comment 3 Commit Notification 2022-03-21 07:37:17 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/494020efe6d29bc319c3abcd3245425e394674ec

tdf#131234: RTF import: extend default char props list

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-03-21 16:23:42 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/39d4246652fd678ea47b315f433f279f08d61318

tdf#131234: RTF import: extend default char props list

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2022-04-06 08:19:24 UTC
*** Bug 148363 has been marked as a duplicate of this bug. ***