tdf#131234: RTF import: extend default char props list

There are much more character attributes should be applied
wth default values if style contain them, but they were
not mentioned in current run.

These are obviously not a complete set yet, but most common
ones are included.

Change-Id: Ide52245bc98628febc2f3bd2e25166f0dcdf35cc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131853
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>